# OpenCVplusplus

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  autorun.sh  gitPush.sh
modules/: CMakeLists.txt
modules/sqrt/: CMakeLists.txt
modules/sqrt/include/: sqrt.hpp
modules/sqrt/src/: sqrt.cpp
sample/: CMakeLists.txt
sample/basic_demo/: CMakeLists.txt
sample/basic_demo/src/: basic_demo.cpp
src/: main.cpp
test/: CMakeLists.txt
test/sqrt_unittest/: CMakeLists.txt  sqrt_unittest.cpp
